--- a/Education_DB/Education_DB.csproj
+++ b/Education_DB/Education_DB.csproj
@@ -46,12 +46,7 @@
   <ItemGroup>
     <Compile Include="Attributes\DateAttribute.cs" />
     <Compile Include="Attributes\IgnoreAttribute.cs" />
-    <Compile Include="Contexts\AddressContext.cs" />
-    <Compile Include="Contexts\BaseContext.cs" />
-    <Compile Include="Contexts\StudentContext.cs" />
-    <Compile Include="Contexts\TeacherContext.cs" />
-    <Compile Include="Contexts\Teacher_UniversityContext.cs" />
-    <Compile Include="Contexts\UniversityContext.cs" />
+    <Compile Include="Contexts\DBContext.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\Teacher.cs" />
@@ -59,7 +54,7 @@
     <Compile Include="Models\University.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataReaderExtension.cs" />
+    <Compile Include="Extensions\DataReaderExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
