--- a/Education_DB/Education_DB.csproj
+++ b/Education_DB/Education_DB.csproj
@@ -46,6 +46,8 @@
   <ItemGroup>
     <Compile Include="Attributes\DateAttribute.cs" />
     <Compile Include="Attributes\IgnoreAttribute.cs" />
+    <Compile Include="Attributes\KeyAttribute.cs" />
+    <Compile Include="Attributes\TableNameAttribute.cs" />
     <Compile Include="Contexts\DBContext.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Student.cs" />
